[package]
name = "space_batter"
version = "0.1.0"
edition = "2021"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Add optimisation in debug mode
[profile.dev]
opt-level = 1

# Enable optimisation just for dependencies e.g. Bevy
[profile.dev.package."*"]
opt-level = 3

[dependencies.bevy]
version = "0.11.1"
# Disable default features since using bevy_kira_audio instead
default-features = false
features = [
	# Bevy functionality:
	"bevy_asset",			# Assets management
	"bevy_winit",			# Window management
	"bevy_render",			# Rendering framework core
	"bevy_core_pipeline",	# Common rendering abstractions
	"bevy_sprite",			# 2D (sprites) rendering
	"bevy_text",			# Text/font rendering
	"animation",			# Animation support
	"default_font",		# Embed a minimal default font for text/UI

	# File formats:
	"png",					# PNG image format for simple 2D images

	# Platform-specific:
	"x11",					# Linux: Support X11 windowing system
	"wayland",				# Linux: Support Wayland windowing system
	"webgl2",				# Web: use WebGL2 instead of WebGPU
]

[dependencies.bevy_kira_audio]
version = "0.17.0"
default-features = false
features = [
	"wav",
]

[dependencies]
rand = "0.8.5"
